@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2025 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,11 +15,15 @@
  */
 package au.gov.asd.tac.constellation.views.analyticview.utilities;
 
+import au.gov.asd.tac.constellation.help.utilities.Generator;
 import au.gov.asd.tac.constellation.views.analyticview.aggregators.AnalyticAggregator;
 import au.gov.asd.tac.constellation.views.analyticview.questions.AnalyticQuestionDescription;
 import au.gov.asd.tac.constellation.views.analyticview.results.AnalyticResult;
 import au.gov.asd.tac.constellation.views.analyticview.translators.GraphVisualisationTranslator;
 import au.gov.asd.tac.constellation.views.analyticview.translators.InternalVisualisationTranslator;
+import au.gov.asd.tac.constellation.views.analyticview.visualisation.GraphVisualisation;
+import au.gov.asd.tac.constellation.views.analyticview.visualisation.InternalVisualisation;
+import java.io.File;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -33,10 +37,11 @@ import org.openide.util.Lookup;
  */
 public class AnalyticUtilities {
 
-    private static final Map<String, AnalyticQuestionDescription> ANALYTIC_QUESTION_DESCRIPTIONS = new HashMap<>();
+    private static final Map<String, AnalyticQuestionDescription<?>> ANALYTIC_QUESTION_DESCRIPTIONS = new HashMap<>();
     private static final Map<String, AnalyticAggregator<?>> ANALYTIC_AGGREGATORS = new HashMap<>();
-    private static final Map<String, InternalVisualisationTranslator> INTERNAL_VISUALISATION_TRANSLATORS = new HashMap<>();
-    private static final Map<String, GraphVisualisationTranslator> GRAPH_VISUALISATION_TRANSLATORS = new HashMap<>();
+    private static final Map<String, InternalVisualisationTranslator<? extends AnalyticResult<?>, ? extends InternalVisualisation>> INTERNAL_VISUALISATION_TRANSLATORS = new HashMap<>();
+    private static final Map<String, GraphVisualisationTranslator<? extends AnalyticResult<?>, ? extends GraphVisualisation>> GRAPH_VISUALISATION_TRANSLATORS = new HashMap<>();
+    private static final String SEP = File.separator;
 
     static {
         Lookup.getDefault().lookupAll(AnalyticQuestionDescription.class).forEach(analyticQuestionDescription
@@ -60,13 +65,13 @@ public class AnalyticUtilities {
     public static Collection<AnalyticQuestionDescription> lookupAnalyticQuestionDescriptions(final Class<? extends AnalyticResult<?>> analyticResultType) {
         return Collections.unmodifiableCollection(ANALYTIC_QUESTION_DESCRIPTIONS.values().stream()
                 .filter(aggregator -> aggregator.getResultType().isAssignableFrom(analyticResultType))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     public static AnalyticQuestionDescription<?> lookupAnalyticQuestionDescription(final Class<? extends AnalyticQuestionDescription<?>> questionDescriptionType) {
         return ANALYTIC_QUESTION_DESCRIPTIONS.values().stream()
-                .filter(questionDescription -> questionDescriptionType.isInstance(questionDescription))
-                .collect(Collectors.toList()).get(0);
+                .filter(questionDescriptionType::isInstance)
+                .toList().get(0);
     }
 
     public static AnalyticQuestionDescription<?> lookupAnalyticQuestionDescription(final String analyticQuestionDescriptionName) {
@@ -80,13 +85,13 @@ public class AnalyticUtilities {
     public static Collection<AnalyticAggregator<?>> lookupAnalyticAggregators(final Class<? extends AnalyticResult<?>> analyticResultType) {
         return Collections.unmodifiableCollection(ANALYTIC_AGGREGATORS.values().stream()
                 .filter(aggregator -> aggregator.getResultType().isAssignableFrom(analyticResultType))
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     public static AnalyticAggregator<?> lookupAnalyticAggregator(final Class<? extends AnalyticAggregator<?>> analyticAggregatorType) {
         return ANALYTIC_AGGREGATORS.values().stream()
-                .filter(aggregator -> analyticAggregatorType.isInstance(aggregator))
-                .collect(Collectors.toList()).get(0);
+                .filter(analyticAggregatorType::isInstance)
+                .toList().get(0);
     }
 
     public static AnalyticAggregator<?> lookupAnalyticAggregator(final String analyticAggregatorName) {
@@ -131,5 +136,13 @@ public class AnalyticUtilities {
 
     public static GraphVisualisationTranslator<?, ?> lookupGraphVisualisationTranslator(final String graphVisualisationTranslatorName) {
         return GRAPH_VISUALISATION_TRANSLATORS.get(graphVisualisationTranslatorName);
+    }
+    
+    /**
+     * Helper method to get the path for the documentation pages 
+     * @return path
+     */
+    public static String getHelpPath() {
+        return Generator.getBaseDirectory() + SEP + "ext" + SEP + "docs" + SEP + "CoreAnalyticView" + SEP;
     }
 }
