@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2021 Australian Signals Directorate
+ * Copyright 2010-2025 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,9 +21,7 @@ import au.gov.asd.tac.constellation.help.utilities.toc.TOCItem;
 import au.gov.asd.tac.constellation.help.utilities.toc.TreeNode;
 import java.io.File;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -34,6 +32,7 @@ import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
 import org.apache.commons.lang3.StringUtils;
+import org.openide.modules.Places;
 import org.openide.util.Lookup;
 import org.openide.windows.OnShowing;
 
@@ -46,54 +45,77 @@ import org.openide.windows.OnShowing;
 public class Generator implements Runnable {
 
     private static final Logger LOGGER = Logger.getLogger(Generator.class.getName());
+    
     private static String baseDirectory = "";
-    private static String tocDirectory = "";
     public static final String TOC_FILE_NAME = "toc.md";
     public static final String ROOT_NODE_NAME = "Constellation Documentation";
 
-    public Generator() {
-        // Intentionally left blank
-    }
+    /**
+     * This is the system property that is set to true in order to make the AWT
+     * thread run in headless mode for tests, etc.
+     */
+    private static final String AWT_HEADLESS_PROPERTY = "java.awt.headless";
 
     /**
      * Generate a table of contents in dev versions of code
      */
     @Override
     public void run() {
-        baseDirectory = getBaseDirectory();
-        tocDirectory = String.format("constellation%1$s%2$s", File.separator, TOC_FILE_NAME);
+        if (Boolean.TRUE.toString().equalsIgnoreCase(System.getProperty(AWT_HEADLESS_PROPERTY))) {
+            return;
+        }
+        
+        // To update the online help TOC file change the boolean to true
+        // Must also run adaptors when updating online help so those links aren't removed from the TOC
+        // Reset back to false after updating the TOC file 
+        final boolean updateOnlineHelp = false;
+ 
+        if (updateOnlineHelp) {
+            baseDirectory = getBaseDirectory();
+            
+            // First: create the TOCFile in the base directory for ONLINE help
+            // Create the online root node for application-wide table of contents
+            TOCGenerator.createTOCFile(getOnlineHelpTOCDirectory() + TOC_FILE_NAME);
+            final TreeNode<TOCItem> root = new TreeNode<>(new TOCItem(ROOT_NODE_NAME, ""));
+            final List<File> tocXMLFiles = getXMLFiles();
+            try {
+                TOCGenerator.convertXMLMappings(tocXMLFiles, root, true);
+            } catch (final IOException ex) {
+                LOGGER.log(Level.WARNING, String.format("There was an error creating the documentation file %s "
+                        + "- Documentation may not be complete", baseDirectory), ex);
+            }
+        }
 
-        // Create TOCFile with the location of the resources file
-        // Create the root node for application-wide table of contents
-        TOCGenerator.createTOCFile(baseDirectory + tocDirectory);
-        final TreeNode root = new TreeNode(new TOCItem(ROOT_NODE_NAME, ""));
-        final List<File> tocXMLFiles = getXMLFiles(baseDirectory);
-
+        // Second: Create TOCFile for OFFLINE help with the location of the resources file
+        // Create the offline root node for application-wide table of contents
+        TOCGenerator.createTOCFile(getTOCDirectory());
+        final TreeNode<TOCItem> rootOffline = new TreeNode<>(new TOCItem(ROOT_NODE_NAME, ""));
+        final List<File> tocXMLFiles = getXMLFiles();
         try {
-            TOCGenerator.convertXMLMappings(tocXMLFiles, root);
+            TOCGenerator.convertXMLMappings(tocXMLFiles, rootOffline, false);
         } catch (final IOException ex) {
             LOGGER.log(Level.WARNING, String.format("There was an error creating the documentation file %s "
-                    + "- Documentation may not be complete", baseDirectory + tocDirectory), ex);
+                    + "- Documentation may not be complete.", getTOCDirectory()), ex);
         }
     }
 
     /**
-     * get the directory that the table of contents is saved to
+     * Get the directory that the table of contents is saved to
      *
      * @return a String path for the file location
      */
     public static String getTOCDirectory() {
-        tocDirectory = String.format("constellation%1$s%2$s", File.separator, TOC_FILE_NAME);
-        return tocDirectory;
+        return Places.getUserDirectory() + File.separator + TOC_FILE_NAME;
     }
 
     /**
-     * get a list of the xml files using a lookup
+     * Get a list of the xml files using a lookup
      *
-     * @param baseDirectory
-     * @return
+     * @return a list of TOC files
      */
-    protected static List<File> getXMLFiles(final String baseDirectory) {
+    protected static List<File> getXMLFiles() {
+        baseDirectory = getBaseDirectory();
+        
         // Loop all providers and add files to the tocXMLFiles list
         final List<File> tocXMLFiles = new ArrayList<>();
         Lookup.getDefault().lookupAll(HelpPageProvider.class).forEach(provider -> {
@@ -111,32 +133,42 @@ public class Generator implements Runnable {
      * @return
      */
     public static String getBaseDirectory() {
+        if (StringUtils.isNotBlank(baseDirectory)) {
+            return baseDirectory;
+        }
         try {
             final String sep = File.separator;
 
             // Get the current directory and make the file within the base project directory.
             final String userDir = getResource();
             String[] splitUserDir = userDir.split(Pattern.quote(sep));
-            while (!"constellation".equals(splitUserDir[splitUserDir.length - 1])) {
+            while (!"ext".equals(splitUserDir[splitUserDir.length - 1])) {
                 splitUserDir = Arrays.copyOfRange(splitUserDir, 0, splitUserDir.length - 1);
             }
             // split once more
             splitUserDir = Arrays.copyOfRange(splitUserDir, 0, splitUserDir.length - 1);
 
             baseDirectory = String.join(sep, splitUserDir) + sep;
-        } catch (final URISyntaxException | MalformedURLException ex) {
+        } catch (final IllegalArgumentException ex) {
             LOGGER.log(Level.SEVERE, "There was a problem retrieving the base directory for launching Offline Help.", ex);
         }
         return baseDirectory;
     }
 
-    protected static String getResource() throws MalformedURLException, URISyntaxException {
+    protected static String getResource() throws IllegalArgumentException {
         final URL sourceLocation = Generator.class.getProtectionDomain().getCodeSource().getLocation();
         final String pathLoc = sourceLocation.getPath();
-        final URL url = new URL(pathLoc);
-        final URI uri = url.toURI();
+        final URI uri = URI.create(pathLoc);
         final Path path = Paths.get(uri);
-        return path != null ? path.toString() : "";
+        final int jarIx = path.toString().lastIndexOf(File.separator);
+        final String newPath = jarIx > -1 ? path.toString().substring(0, jarIx) : "";
+        return newPath != null ? newPath + File.separator + "ext" : "";
+    }
+    
+    public static String getOnlineHelpTOCDirectory() {
+        baseDirectory = getBaseDirectory();
+        final int index = baseDirectory.lastIndexOf("constellation" + File.separator);
+        return baseDirectory.substring(0, index + 14);
     }
 
 }
