@@ -1,5 +1,5 @@
 /*
- * Copyright 2010-2022 Australian Signals Directorate
+ * Copyright 2010-2025 Australian Signals Directorate
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,17 +16,28 @@
 package au.gov.asd.tac.constellation.utilities.rest;
 
 import au.gov.asd.tac.constellation.utilities.datastructure.Tuple;
+import au.gov.asd.tac.constellation.utilities.log.ConnectionLogging;
+import au.gov.asd.tac.constellation.utilities.log.LogPreferences;
 import java.io.IOException;
 import java.io.OutputStream;
+import java.io.UnsupportedEncodingException;
+import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import javax.net.ssl.HttpsURLConnection;
+import org.mockito.MockedStatic;
 import org.mockito.Mockito;
+import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.when;
-import static org.testng.Assert.*;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.stubbing.Answer;
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertNull;
+import static org.testng.Assert.assertTrue;
 import org.testng.annotations.AfterClass;
 import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeClass;
@@ -39,78 +50,85 @@ import org.testng.annotations.Test;
  */
 public class RestClientNGTest {
     
-    StringBuilder outputStreamString;  // This value is manipulated by the test
-                                        // rest interface implementation
+    private StringBuilder outputStreamString;  // This value is manipulated by the test rest interface implementation
     
-    public RestClientNGTest() {
-    }
-
     @BeforeClass
     public static void setUpClass() throws Exception {
+        // Not currently required
     }
 
     @AfterClass
     public static void tearDownClass() throws Exception {
+        // Not currently required
     }
 
     @BeforeMethod
     public void setUpMethod() throws Exception {
+        // Not currently required
     }
 
     @AfterMethod
     public void tearDownMethod() throws Exception {
+        // Not currently required
     }
 
     /**
      * Test of generateUrl method, of class RestClient.
+     * @throws java.io.UnsupportedEncodingException
+     * @throws java.net.MalformedURLException
      */
     @Test
-    public void testGenerateUrl_NullParams() throws Exception {
+    public void testGenerateUrl_NullParams() throws UnsupportedEncodingException, MalformedURLException {
         System.out.println("testGenerateUrl");
         String url = "https://testurl.tst/testEndpoint";
         List<Tuple<String, String>> params = null;
         URL result = RestClient.generateUrl(url, params);
-        assertEquals(result, new URL(url));
+        assertEquals(result, URI.create(url).toURL());
     }
 
     /**
      * Test of generateUrl method, of class RestClient.
-     * @throws java.lang.Exception
+     * @throws java.io.UnsupportedEncodingException
+     * @throws java.net.MalformedURLException
      */
     @Test
-    public void testGenerateUrl_Empty() throws Exception {
+    public void testGenerateUrl_Empty() throws UnsupportedEncodingException, MalformedURLException  {
         System.out.println("testGenerateUrl");
         String url = "https://testurl.tst/testEndpoint";
         List<Tuple<String, String>> params = new ArrayList<>();
         URL result = RestClient.generateUrl(url, params);
-        assertEquals(result, new URL(url));
+        assertEquals(result, URI.create(url).toURL());
     }
 
     /**
      * Test of generateUrl method, of class RestClient.
+     * @throws java.io.UnsupportedEncodingException
+     * @throws java.net.MalformedURLException
      */
     @Test
-    public void testGenerateUrl_InvalidParamName() throws Exception {
+    public void testGenerateUrl_InvalidParamName() throws UnsupportedEncodingException, MalformedURLException {
         System.out.println("testGenerateUrl");
         String url = "https://testurl.tst/testEndpoint";
         List<Tuple<String, String>> params = new ArrayList<>();
-        params.add(new Tuple("", "value"));
+        params.add(new Tuple<>("", "value"));
         URL result = RestClient.generateUrl(url, params);
-        assertEquals(result, new URL(url));
+        assertEquals(result, URI.create(url).toURL());
     }
 
     /**
      * Test of generateUrl method, of class RestClient.
+     * @throws java.io.UnsupportedEncodingException
+     * @throws java.net.MalformedURLException
      */
     @Test
-    public void testGenerateUrl_ValidParams() throws Exception {
+    public void testGenerateUrl_ValidParams() throws UnsupportedEncodingException, MalformedURLException {
         System.out.println("testGenerateUrl");
         String url = "https://testurl.tst/testEndpoint";
         List<Tuple<String, String>> params = new ArrayList<>();
-        params.add(new Tuple("param 1", "value1 with spaces"));
-        params.add(new Tuple("param+2", "value2+with+plusses"));
+        params.add(new Tuple<>("param 1", "value1 with spaces"));
+        params.add(new Tuple<>("param+2", "value2+with+plusses"));
         URL result = RestClient.generateUrl(url, params);
-        assertEquals(result, new URL(String.format("%s?param%%201=value1%%20with%%20spaces&param%%2B2=value2%%2Bwith%%2Bplusses", url)));
+        assertEquals(result, URI.create(String.format("%s?param%%201=value1%%20with%%20spaces&param%%2B2=value2%%2Bwith%%2Bplusses", url)).toURL());
     }
 
     /**
@@ -129,9 +147,10 @@ public class RestClientNGTest {
 
     /**
      * Test of get method, of class RestClient.
+     * @throws java.io.IOException
      */
     @Test
-    public void testGetInvalidResponseCode() throws Exception {
+    public void testGetInvalidResponseCode() throws IOException {
         System.out.println("testGet");
         String url = "";
         // Stubbed RestClientImpl uses params to provide class params
@@ -178,9 +197,10 @@ public class RestClientNGTest {
 
     /**
      * Test of post method, of class RestClient.
+     * @throws java.io.IOException
      */
     @Test
-    public void testPostInvalidResponseCode() throws Exception {
+    public void testPostInvalidResponseCode() throws IOException {
         System.out.println("testPostInvalidResponseCode");
         String url = "";
         List<Tuple<String, String>> params = new ArrayList<>();
@@ -202,9 +222,10 @@ public class RestClientNGTest {
 
     /**
      * Test of postWithJson method, of class RestClient.
+     * @throws java.io.IOException
      */
     @Test
-    public void testPostWithJson() throws Exception {
+    public void testPostWithJson() throws IOException {
         System.out.println("testPostWithJson");
         String url = "";
         List<Tuple<String, String>> params = new ArrayList<>();
@@ -227,17 +248,10 @@ public class RestClientNGTest {
 
     /**
      * Test of postWithBytes method, of class RestClient.
+     * @throws java.io.IOException
      */
     @Test
-    public void testPostWithBytes_String_Map() throws Exception {
-        System.out.println("testPostWithBytes_String_Map - not testing deprecated function");
-    }
-
-    /**
-     * Test of postWithBytes method, of class RestClient.
-     */
-    @Test
-    public void testPostWithBytes() throws Exception {
+    public void testPostWithBytes() throws IOException {
         System.out.println("testPostWithBytes");
         String url = "";
         List<Tuple<String, String>> params = new ArrayList<>();
@@ -273,6 +287,47 @@ public class RestClientNGTest {
         // checks it can be called
     }
     
+    /**
+     * Test to confirm that the request and response data is sent to 
+     * the Logger when the Connection Logging option has been enabled.
+     * 
+     * @throws java.io.IOException
+     */
+    @Test
+    public void testConnectionLogging() throws IOException {
+        System.out.println("testConnectionLogging");
+
+        final MockedStatic<LogPreferences> logPrefs = Mockito.mockStatic(LogPreferences.class);
+        logPrefs.when(LogPreferences::isConnectionLoggingEnabled).thenReturn(true);        
+        final MockedStatic<ConnectionLogging> conLoggingStatic = Mockito.mockStatic(ConnectionLogging.class);
+        final ConnectionLogging conLogging = Mockito.mock(ConnectionLogging.class);
+        conLoggingStatic.when(ConnectionLogging::getInstance).thenReturn(conLogging);
+        final StringBuilder outputLog = new StringBuilder();
+        doAnswer((final InvocationOnMock iom) -> {
+            outputLog.append(iom.getArgument(1).toString()).append("\n");
+            return null;            
+        }).when(conLogging).log(Mockito.any(), Mockito.anyString(), Mockito.any());
+        
+        final String url = "SAMPLE URL";
+        final List<Tuple<String, String>> params = new ArrayList<>();
+        params.add(new Tuple<>("AAA", "BBB"));
+        params.add(new Tuple<>(null, "CCC"));
+        params.add(new Tuple<>(" ", "DDD"));
+        final String requestBody = "Message Body: Sample Bytes From String";
+        final byte[] requestBytes = requestBody.getBytes();
+        final Map<String, List<String>> headerFields = new HashMap<>();
+        headerFields.put("hdr1", new ArrayList<>());
+        final String responseMessage = "Mocked Response";
+        final RestClientImpl instance = new RestClientImpl(200, responseMessage, headerFields);
+        outputStreamString = new StringBuilder();
+        instance.postWithBytes(url, params, requestBytes);
+
+        // Check that the request body has been sent to the log file
+        assertTrue(outputLog.toString().contains(requestBody));
+        // Check that the response message has been sent to the log file
+        assertTrue(outputLog.toString().contains(responseMessage));
+    }
+        
     /**
      * Implementation of a Rest implementation of a REST client for testing
      * purposes which makes use of Mockito to mock the actual connection.
